2012-01-31  Per Bothner  <per@bothner.com>

	* Lazy.java: Note that getValue is allowed to return this.
	* Promise.java (force): Handle case of getValue returning this.

2012-01-27  Per Bothner  <per@bothner.com>

	* Promise.java (isBlank): New method.
	(checkUnset): Rename to checkBlank.
	(setValue, setvalue, setException, setThnk): New methods.
	(getValue): Changes to handle new functionality.
	(print): Add overload.
	(toString): New method.

2012-01-15  Per Bothner  <per@bothner.com>

	* Promise.java: Make final, because moveFrom would be anomolous if
	source or target would be a sub-class of Promise.
	(moveFrom): New method.
	(forceValueIfPromise): New field.
	(setForceValueIfPromise): New method.
	(<init>): New default constructor.
	(setValue, setAlias, setException, setThunk): New methods.
	(getValue) Re-implement to match SRFI-45.
	(force1): New static method.

2012-01-01  Per Bothner  <per@bothner.com>

	* Lazy.java (getValue): Changed to no longer throw Throwable.
	* Future.java (getValue): Catch and maybe wrap exception.
	* Promise.java (getValue): Likewise.
	(makeBoundPromise): New static method.
	(force): Simplify.
	* WrappedException.java (rethrow): New static method.

2011-10-08  Charles Turner  <chturne@gmail.com>

	* OutPort.java (getPrettyWriter): New getter.
	* OutPort.java: various @Override annotations.

2011-07-13  Per Bothner  <per@bothner.com>

	* Namespace.java (valueOfNoCreate): New static method.

2011-07-04  Per Bothner  <bothner@kuling.bothner.com>

	* MethodProc.java (isApplicable): Add special hack for
	Type.toStringType.

2011-06-29  Per Bothner  <bothner@kuling.bothner.com>

	* MethodProc.java (mostSpecific): Fix thinko.  (Not 100% sure this
	is right, but at least is doesn't crash now.)

2011-06-23  Per Bothner  <bothner@kuling.bothner.com>

	* Lazy.java (force): Rename to getValue;
	* Future.java (force): Likewise
	* Promise.java (force): Likewise.
	(static force): Update to use getValue method interface Lazy.
